--- a/ckanext/ckanext-sixodp_ui/src/scss/components/media-grid.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/media-grid.scss
@@ -5,6 +5,7 @@
     @extend .card-theme;
     @extend .card-hover;
     padding: 15px;
+    width: 290px;
 
     img {
       width: 100%;
